syntax = "proto3";

package software;

option go_package = "api/openai;chat";

message ChatMessage {
    string role = 1;

    message Content {
        string text = 1;
        string type = 2;
    }

    repeated Content content = 2;
}

message ChatRequest {
    string model = 1;
    repeated ChatMessage messages = 2;
    float temperature = 3;
    int32 max_tokens = 4;
    float top_p = 5;
    float frequency_penalty = 6;
    float presence_penalty = 7;
}